ORIGINALS/HTML/style/main.css
#pagecontainer{
	width: 850px;
	margin-left: auto;
	margin-right: auto;
	border: 0px red solid;
}



#registrationtitle{
	text-align:center;
}

#navigation  ul {
	margin: 0px;
	padding: 0px;
	list-style-type: none;
}

#navigation ul li {
	display: inline;
	padding-right: .3em;
}


#frontpagetopnavigationlist {
	float: right;
	margin-right: 10px;
	margin-bottom: 25px;
}


#header {
	width: 300px;
	float:left;
}

#bookexlogo {
	font-size: 72px;
	width: 300px;
	float: left;
}

#bookexlogo.frontpageonly {
	text-align:center;
	width:848px;
}


#search {
	float: right;
	margin-left: 0px;
	margin-top: 15px;	
	margin-bottom: 15px;
}
	select {
		width: 100px;
	}
#navigation {
	float: right;
	margin-right: 0px;
	margin-bottom: 0px;
}
/*Page start*/
#page {
	clear: both;
	margin: 10px;
	border: solid 1px lightgray;	
	background: #eee;
	width: 848px;
	margin-left: auto;
	margin-right: auto;
	min-height: 700px;
	padding: 0px 0px 0px;
}
	.pageTitle {
		font-size: 30px;
		margin: 10px;
		margin-left: 20px;
	}

	.pageSubTitle {
		font-size: 20px;
		margin: 10px;
		margin-left: 20px;
	}

/*Page end*/
	
	
	#mybooklist .pageSubTitle {
		margin-left: 5px;
	}
	#searchresults .pageSubTitle {
		margin-left: 5px;
	}

	
	/*
	#booksearchresults .pageSubTitle {
		margin-left: 5px;
	}
	*/

/*A space to notify , give feedback to user what they just did, eg. have just deleted a book */	
#notification{
	width: 800px;
	margin-left:auto;
	margin-right:auto;
	padding: 5px;
	border: 0px gray solid;
	background-color: lightyellow;
	display: none;	
}
	#notification.show{
		display: inline;
	}
	#notification.hide{
		display: none;
}
/* Dashbaord message header */
.header {
	font-size: 20px;
	margin:10px;
}


#footer {
	margin-left: auto;
	margin-right: auto;
}

#footernavigation {
	margin-left: auto;
	margin-right: auto;
	text-align: center;
	margin: 0px;
	padding: 0px;
	list-style-type: none;
}

#footernavigation li {
	display: inline;
	padding-right: .3em;
}

#copyrightstatement {
	margin-left: auto;
	margin-right: auto;
	text-align: center;
}
/*
#confirmationmessagearea.contentarea{
	overflow: hidden;
	
}	
#notificationmessagearea.contentarea {
	overflow: hidden;	
}

#booksborrowedlist.contentarea {
	overflow: hidden;	
}
#searchresultsarea.contentarea {
	overflow:hidden;
}
*/
.contentarea  {
	-moz-border-radius: 5px;
	border-radius: 5px;
	border: solid 1px gray;
	margin: 10px;
	padding: 5px;
	background: white;
	width: 800px;
	margin-right: auto;
	margin-left: auto;
	/*overflow: hidden;*/
	
}

.contentarea table {
	width: 98%;
	border-spacing: 0px 3px;
	margin-left: 1%;
	margin-right: 1%;
}

.contentarea table thead tr{
	background: #ddd;
}

.contentarea table tbody tr{
	background: #eee;
	border-spacing: 5px;
}



#frontpagecontent {
	margin-top: 100px;
	margin-bottom: 100px;
}

/* These are the button columns, they are all the same width */
.yourrequestsbutton , .othersrequestsacceptbutton, .othersrequestsdenybutton, 
.bookreturnbutton, .receiptconfirmationsbutton, .deliveryconfirmationsbutton , .returnconfirmationsbuttons{
	width: 100px;
	text-align: center;
}

.leftContent {
	float: left;
	width: 200px;
}

.rightContent {
	float: left;
	padding: 15px;
	width: 545px;
	border: 0px solid black;
	background-color: #eee;
}

.clear {
	clear: both;
}

#bookImageContent {
	text-align: center;
	margin: 10px;
}

#bookImagePhoto {
	margin-left: 25px;	
	width: 130px;
	height: 180px;
	border: 1px solid gray;
	
}

button {
	width:100px;
}

.requestbutton {
	text-align: right;
}

.smallbtn { 
	width: 100px !important;
	margin: 10px;
}

.actionButton {
	width: 100px !important;	
	min-width: 100px;
	height: 30px;
	margin: 10px;
}

#defaultform div {
	min-height: 2em;
} 

/* For the details screen, the details are wrapped in a div.. so float it */
#defaultform div  div{
	float: left;
} 
#defaultform label {
	clear: left;
	float: left;
	width: 10em;
}

#defaultform input[type='text'] {
	width: 28em;
}

#defaultform textarea {
	width: 41em;
	height: 6em;
	
}




.bookDescription {
	max-width: 500px;
}

#informationbuttons {
	margin: 25px;
	text-align: center;
}

#informationbuttons input[type='submit'] {
	height: 100px;
	width: 200px;
	margin: 50px;
	-moz-border-radius: 5px;
	border-radius: 5px;
	font-size: 17pt;
}

#uwnetiddisplayarea {
	
	text-align: center;
	margin-left:auto;
	margin-right: auto;
}


#additionalinfotextareas label {
	clear: left;
	float: left;
	width: 8.5em;
	text-align: right;
	margin: 5px;
	
}

#additionalinfotextareas input[type='text'] {
	
	text-align: left;
	width: 20em;
	margin: 5px;
}

#pleasenotemessage {
	margin-left: auto;
	margin-right: auto;
	width: 500px;
	text-align: justify;	

}
/* Center the net ID area */
.centerDiv {
	margin-left: auto;
	margin-right: auto;
}

#agreeandregistercontent, #additionalinfotextareas { 
	width: 500px;
}
	#centeringtextarea {
		width: 500px;
		margin-right: auto;
		margin-left: auto;
		text-align:center;
		border: 0px blue solid;
		padding: 10px 0px 10px;
	}
	
	
#agreementbuttons {
	width: 70%;
	text-align: center;
	padding: 10px;
}

#agreementbuttons input[type='submit'] {
	margin: 15px;
}

